<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="navigation_movie">Movie</string>
    <string name="navigation_tv">TV Show</string>
    <string name="button_watch">Wacth Now</string>
    <string name="menu_language">Select Language</string>
    <string name="search">Search</string>
    <string name="about_dev">About Developer</string>
    <string name="name_app">Catalogue Movie</string>
    <string name="favorite">Favorite</string>


    <string name="sistem">System</string>
    <string name="setting">Setting</string>
    <string name="summary_language">Select language</string>
    <string name="key_language">keylang</string>
    <string name="language">Language</string>

    <string name="menu_notification">Notification</string>
    <string name="summary_daily">Daily Reminder</string>
    <string name="key_daily">keydaily</string>
    <string name="daily">Remind for back to this app</string>
    <string name="daily_message">"it's good time to back to apps"</string>

    <string name="summary_release">Release Reminder</string>
    <string name="key_release">keyrelease</string>
    <string name="release">Remind when there is new movie</string>
    <string name="release_message">wow new Movie, lets come and watch</string>

    <string name="empty_text">Empty Favorite</string>


    <string name="daily_reminder_active">Daily reminder is actived</string>
    <string name="daily_reminder_noactive">Daily reminder is not actived</string>

    <string name="release_reminder_active">Release reminder is actived</string>
    <string name="release_reminder_noactive">Release reminder is not actived</string>


    <string name="about">About</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="Contact_us">Contact Us</string>
    <string name="key_contact">key_contact</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>